--- a/gallery/index.html
+++ b/gallery/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gallery - Keval Photography</title>
-  <link rel="icon" type="image/png" href="../images/favicon.png" />
+  <link rel="icon" href="../images/favicon.png" type="image/png" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
@@ -14,107 +14,136 @@
     .overlay {
       background-color: rgba(0, 0, 0, 0.6);
     }
-    .lightbox-img {
-      max-width: 90vw;
-      max-height: 80vh;
+    .lightbox {
+      backdrop-filter: blur(10px);
     }
     .watermark {
-      position: absolute;
-      bottom: 5px;
-      right: 10px;
-      font-size: 12px;
-      color: rgba(255,255,255,0.6);
+      position: fixed;
+      bottom: 10px;
+      right: 20px;
+      color: rgba(255, 255, 255, 0.3);
+      font-size: 14px;
+      pointer-events: none;
+      z-index: 10;
+    }
+    .fade-in {
+      animation: fadeIn 1s ease-in-out;
+    }
+    @keyframes fadeIn {
+      from {opacity: 0;}
+      to {opacity: 1;}
     }
   </style>
 </head>
-<body class="overlay text-white">
+<body class="text-white overlay">
 
-  <!-- Header Buttons -->
-  <div class="flex justify-between items-center p-4">
-    <a href="../index.html" class="bg-white text-black px-4 py-2 rounded hover:bg-gray-300 transition">🏠 Home</a>
-    <a href="https://www.instagram.com/keval.kotadia" target="_blank"
-      class="bg-pink-600 hover:bg-pink-700 text-white px-4 py-2 rounded transition w-max">Follow on Instagram</a>
+  <!-- Top Buttons -->
+  <div class="absolute top-4 right-4 space-x-2 z-20">
+    <a href="/" class="bg-black/60 px-4 py-2 rounded hover:bg-white hover:text-black transition">Home</a>
+    <a href="https://www.instagram.com/keval.kotadia" target="_blank" class="bg-pink-600 hover:bg-pink-700 text-white px-4 py-2 rounded transition block">Follow on Instagram</a>
   </div>
 
-  <!-- Gallery Grid -->
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 p-4">
-    <!-- Image Blocks -->
-    <!-- Images 1 to 17 -->
-    <!-- Each image opens lightbox -->
-    <!-- Replace '1.jpg' to '17.jpg' if needed -->
-    <script>
-      const totalImages = 17;
-      for (let i = 1; i <= totalImages; i++) {
-        document.write(`
-          <img src="../images/${i}.jpg" 
-               class="w-full h-auto rounded cursor-pointer hover:scale-105 transition duration-200" 
-               onclick="openLightbox(${i})" 
-               alt="Image ${i}" />
-        `);
-      }
-    </script>
-  </div>
-
-  <!-- Lightbox -->
-  <div id="lightbox" class="fixed inset-0 bg-black bg-opacity-90 flex items-center justify-center z-50 hidden">
-    <div class="relative text-center">
-      <img id="lightbox-img" src="" alt="Preview" class="lightbox-img rounded shadow-lg mx-auto" />
-      <div class="watermark">© Keval Photography</div>
-      <button id="prev" class="absolute top-1/2 left-[-50px] transform -translate-y-1/2 text-white text-4xl">&#10094;</button>
-      <button id="next" class="absolute top-1/2 right-[-50px] transform -translate-y-1/2 text-white text-4xl">&#10095;</button>
-      <a id="download" download class="absolute bottom-[-60px] left-1/2 transform -translate-x-1/2 bg-white text-black px-4 py-2 rounded hover:bg-gray-300 transition">Download</a>
-      <button id="close" class="absolute top-[-40px] right-[-40px] text-white text-3xl bg-red-600 px-3 rounded-full hover:bg-red-700 transition">&times;</button>
+  <div class="min-h-screen px-4 pt-20 pb-10 fade-in">
+    <h1 class="text-4xl font-bold text-center mb-8">Photo Gallery</h1>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+      <!-- Image Blocks -->
+      <div class="relative group">
+        <img src="../images/1.jpg" alt="Photo 1" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(1)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/2.jpg" alt="Photo 2" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(2)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/3.jpg" alt="Photo 3" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(3)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/4.jpg" alt="Photo 4" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(4)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/5.jpg" alt="Photo 5" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(5)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/6.jpg" alt="Photo 6" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(6)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/7.jpg" alt="Photo 7" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(7)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/8.jpg" alt="Photo 8" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(8)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/9.jpg" alt="Photo 9" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(9)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/10.jpg" alt="Photo 10" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(10)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/11.jpg" alt="Photo 11" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(11)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/12.jpg" alt="Photo 12" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(12)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/13.jpg" alt="Photo 13" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(13)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/14.jpg" alt="Photo 14" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(14)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/15.jpg" alt="Photo 15" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(15)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/16.jpg" alt="Photo 16" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(16)" />
+      </div>
+      <div class="relative group">
+        <img src="../images/17.jpg" alt="Photo 17" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(17)" />
+      </div>
     </div>
   </div>
 
-  <!-- Back to Top Button -->
-  <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})"
-    class="fixed bottom-5 right-5 bg-white text-black px-4 py-2 rounded-full shadow-lg hover:bg-gray-300 transition z-40">
-    ⬆
-  </button>
+  <!-- Watermark -->
+  <div class="watermark">© Keval Photography</div>
 
-  <!-- Scripts -->
+  <!-- Scroll to top -->
+  <button onclick="scrollToTop()" class="fixed bottom-5 right-5 bg-black/60 hover:bg-white hover:text-black text-white px-3 py-2 rounded-full transition z-50">↑</button>
+
+  <!-- Lightbox -->
+  <div id="lightbox" class="hidden fixed inset-0 bg-black/90 flex items-center justify-center z-50 lightbox">
+    <button onclick="closeLightbox()" class="absolute top-4 right-6 text-white text-xl bg-red-600 hover:bg-red-700 px-3 py-1 rounded-full">×</button>
+    <button onclick="prevImage()" class="absolute left-4 text-white text-2xl">&#10094;</button>
+    <img id="lightboxImage" src="" class="max-h-[90vh] max-w-[90vw] rounded shadow-lg transition-all duration-300" />
+    <button onclick="nextImage()" class="absolute right-4 text-white text-2xl">&#10095;</button>
+    <a id="downloadBtn" href="" download class="absolute bottom-5 right-6 bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded shadow-lg">Download</a>
+  </div>
+
   <script>
-    const lightbox = document.getElementById('lightbox');
-    const lightboxImg = document.getElementById('lightbox-img');
-    const downloadLink = document.getElementById('download');
-    let currentImage = 1;
-    const totalImages = 17;
+    let currentIndex = 1;
 
     function openLightbox(index) {
-      currentImage = index;
-      lightboxImg.src = `../images/${index}.jpg`;
-      downloadLink.href = `../images/${index}.jpg`;
-      lightbox.classList.remove('hidden');
+      currentIndex = index;
+      const imgPath = '../images/' + index + '.jpg';
+      document.getElementById('lightboxImage').src = imgPath;
+      document.getElementById('downloadBtn').href = imgPath;
+      document.getElementById('lightbox').classList.remove('hidden');
     }
 
     function closeLightbox() {
-      lightbox.classList.add('hidden');
+      document.getElementById('lightbox').classList.add('hidden');
     }
 
-    function showNext() {
-      currentImage = currentImage === totalImages ? 1 : currentImage + 1;
-      openLightbox(currentImage);
+    function nextImage() {
+      currentIndex = currentIndex >= 17 ? 1 : currentIndex + 1;
+      openLightbox(currentIndex);
     }
 
-    function showPrev() {
-      currentImage = currentImage === 1 ? totalImages : currentImage - 1;
-      openLightbox(currentImage);
+    function prevImage() {
+      currentIndex = currentIndex <= 1 ? 17 : currentIndex - 1;
+      openLightbox(currentIndex);
     }
 
-    document.getElementById('close').onclick = closeLightbox;
-    document.getElementById('next').onclick = showNext;
-    document.getElementById('prev').onclick = showPrev;
-
-    // Keyboard Navigation
-    document.addEventListener('keydown', (e) => {
-      if (!lightbox.classList.contains('hidden')) {
-        if (e.key === 'ArrowRight') showNext();
-        if (e.key === 'ArrowLeft') showPrev();
-        if (e.key === 'Escape') closeLightbox();
-      }
-    });
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
   </script>
-
 </body>
 </html>
