--- a/gallery/index.html
+++ b/gallery/index.html
@@ -40,64 +40,20 @@
   <!-- Top Buttons -->
   <div class="absolute top-4 right-4 space-x-2 z-20">
     <a href="/" class="bg-black/60 px-4 py-2 rounded hover:bg-white hover:text-black transition">Home</a>
-    <a href="https://www.instagram.com/keval.kotadia" target="_blank" class="bg-pink-600 hover:bg-pink-700 text-white px-4 py-2 rounded transition block">Follow on Instagram</a>
+    <a href="https://www.instagram.com/keval.kotadia" target="_blank" class="bg-pink-600 hover:bg-pink-700 text-white px-4 py-2 rounded transition">Follow on Instagram</a>
   </div>
 
   <div class="min-h-screen px-4 pt-20 pb-10 fade-in">
     <h1 class="text-4xl font-bold text-center mb-8">Photo Gallery</h1>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-      <!-- Image Blocks -->
-      <div class="relative group">
-        <img src="../images/1.jpg" alt="Photo 1" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(1)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/2.jpg" alt="Photo 2" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(2)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/3.jpg" alt="Photo 3" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(3)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/4.jpg" alt="Photo 4" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(4)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/5.jpg" alt="Photo 5" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(5)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/6.jpg" alt="Photo 6" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(6)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/7.jpg" alt="Photo 7" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(7)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/8.jpg" alt="Photo 8" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(8)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/9.jpg" alt="Photo 9" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(9)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/10.jpg" alt="Photo 10" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(10)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/11.jpg" alt="Photo 11" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(11)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/12.jpg" alt="Photo 12" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(12)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/13.jpg" alt="Photo 13" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(13)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/14.jpg" alt="Photo 14" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(14)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/15.jpg" alt="Photo 15" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(15)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/16.jpg" alt="Photo 16" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(16)" />
-      </div>
-      <div class="relative group">
-        <img src="../images/17.jpg" alt="Photo 17" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer hover:scale-105 transition" onclick="openLightbox(17)" />
-      </div>
+      <!-- Image Block Start -->
+      <!-- Repeat for 17 images -->
+      ${[...Array(17).keys()].map(i => `
+        <div class="relative group">
+          <img src="../images/${i+1}.jpg" alt="Photo ${i+1}" class="w-full h-64 object-cover rounded-lg shadow-lg cursor-pointer transition-transform duration-300 hover:scale-105" onclick="openLightbox(${i+1})" />
+        </div>
+      `).join('')}
+      <!-- Image Block End -->
     </div>
   </div>
 
