--- a/gallery/index.html
+++ b/gallery/index.html
@@ -236,6 +236,19 @@
     link.click();
   }
 
+  // Enable left/right arrow navigation in lightbox
+  document.addEventListener('keydown', function(e) {
+    if (lightbox.style.display === 'flex') {
+      if (e.key === 'ArrowRight') {
+        nextImage();
+      } else if (e.key === 'ArrowLeft') {
+        prevImage();
+      } else if (e.key === 'Escape') {
+        closeLightbox();
+      }
+    }
+  });
+
   window.onscroll = function () {
     const btn = document.getElementById("backToTop");
     btn.style.display = window.scrollY > 200 ? "block" : "none";
@@ -245,6 +258,7 @@
     window.scrollTo({ top: 0, behavior: 'smooth' });
   }
 </script>
+
 
 </body>
 </html>
