--- a/gallery/index.html
+++ b/gallery/index.html
@@ -164,7 +164,7 @@
 <header>
   <h1>Keval's Photography</h1>
   <div class="buttons">
-    <a href="index.html">🏠 Home</a>
+    <a href="../">🏠 Home</a>
     <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">📷 Follow on Instagram</a>
   </div>
 </header>
