--- a/gallery/index.html
+++ b/gallery/index.html
@@ -78,8 +78,9 @@
       animation: fadeIn 0.6s ease-in-out;
     }
 
-    .gallery img:hover {
-      transform: scale(1.03);
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     #lightbox {
@@ -101,14 +102,39 @@
     }
 
     .lightbox-controls {
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      transform: translateY(-50%);
+      pointer-events: none;
+    }
+
+    .arrow-btn {
+      font-size: 3rem;
+      color: white;
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      padding: 0 1rem;
+      pointer-events: auto;
+      transition: color 0.3s ease;
+      user-select: none;
+    }
+
+    .arrow-btn:hover {
+      color: #ccc;
+    }
+
+    .download-close {
       margin-top: 1rem;
       display: flex;
       gap: 1rem;
       justify-content: center;
-      flex-wrap: wrap;
     }
 
-    .lightbox-controls button {
+    .download-close button {
       padding: 0.5rem 1rem;
       background: white;
       border: none;
@@ -117,34 +143,8 @@
       font-weight: bold;
     }
 
-    .lightbox-controls button:hover {
+    .download-close button:hover {
       background: #ddd;
-    }
-
-    .arrow-button {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background: #ffffff80;
-      border: none;
-      border-radius: 50%;
-      padding: 10px 14px;
-      font-size: 1.2rem;
-      cursor: pointer;
-      z-index: 1000;
-    }
-
-    .arrow-button:hover {
-      background: white;
-      color: black;
-    }
-
-    #prevArrow {
-      left: 20px;
-    }
-
-    #nextArrow {
-      right: 20px;
     }
 
     #watermark {
@@ -174,11 +174,6 @@
       background: white;
       color: black;
     }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
   </style>
 </head>
 <body>
@@ -194,8 +189,7 @@
 </header>
 
 <section class="gallery">
-  <!-- Image Blocks (with lazy loading) -->
-  <!-- Replace total image count as per your assets -->
+  <!-- Image Blocks -->
   <img src="/images/1.jpg" alt="Photo 1" loading="lazy" onclick="openLightbox(0)">
   <img src="/images/2.jpg" alt="Photo 2" loading="lazy" onclick="openLightbox(1)">
   <img src="/images/3.jpg" alt="Photo 3" loading="lazy" onclick="openLightbox(2)">
@@ -216,10 +210,12 @@
 </section>
 
 <div id="lightbox">
-  <button id="prevArrow" class="arrow-button" onclick="prevImage()">⟵</button>
-  <img id="lightboxImage" src="" alt="Preview"/>
-  <button id="nextArrow" class="arrow-button" onclick="nextImage()">⟶</button>
   <div class="lightbox-controls">
+    <button class="arrow-btn" onclick="prevImage()">&#60;</button>
+    <button class="arrow-btn" onclick="nextImage()">&#62;</button>
+  </div>
+  <img id="lightboxImage" src="" alt="Preview"/>
+  <div class="download-close">
     <button onclick="downloadImage()">⬇️ Download</button>
     <button onclick="closeLightbox()">❌ Close</button>
   </div>
@@ -261,6 +257,7 @@
     link.click();
   }
 
+  // Arrow keys support
   document.addEventListener('keydown', function(e) {
     if (lightbox.style.display === 'flex') {
       if (e.key === 'ArrowRight') nextImage();
@@ -269,22 +266,24 @@
     }
   });
 
+  // Touch swipe support
   let touchStartX = 0;
-  let touchEndX = 0;
-
-  lightbox.addEventListener('touchstart', function(e) {
+  lightbox.addEventListener('touchstart', e => {
     touchStartX = e.changedTouches[0].screenX;
   });
 
-  lightbox.addEventListener('touchend', function(e) {
-    touchEndX = e.changedTouches[0].screenX;
-    if (touchEndX < touchStartX - 40) nextImage();
-    if (touchEndX > touchStartX + 40) prevImage();
+  lightbox.addEventListener('touchend', e => {
+    const deltaX = e.changedTouches[0].screenX - touchStartX;
+    if (Math.abs(deltaX) > 50) {
+      if (deltaX > 0) prevImage();
+      else nextImage();
+    }
   });
 
+  // Back to top
   window.onscroll = function () {
-    const btn = document.getElementById("backToTop");
-    btn.style.display = window.scrollY > 200 ? "block" : "none";
+    document.getElementById("backToTop").style.display =
+      window.scrollY > 200 ? "block" : "none";
   };
 
   function scrollToTop() {
