--- a/gallery/index.html
+++ b/gallery/index.html
@@ -4,292 +4,108 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Keval's Gallery</title>
-  <link rel="icon" href="/images/favicon.png" type="image/png"/>
+  <link rel="stylesheet" href="/style.css" />
   <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: url('/images/background.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
-      position: relative;
-    }
+  .lightbox {
+    background: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(4px);
+  }
 
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.75);
-      z-index: -1;
-    }
+  .lightbox-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 3rem;
+    color: white;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    z-index: 1001;
+    user-select: none;
+    transition: color 0.2s ease;
+  }
 
-    header {
-      text-align: center;
-      padding: 2rem 1rem 1rem;
-    }
+  .lightbox-arrow:hover {
+    color: #ffcccc;
+  }
 
-    header h1 {
+  .lightbox-prev {
+    left: 10px;
+  }
+
+  .lightbox-next {
+    right: 10px;
+  }
+
+  @media (max-width: 600px) {
+    .lightbox-arrow {
       font-size: 2.5rem;
-      letter-spacing: 2px;
-      margin: 0;
-      text-shadow: 0 0 10px black;
     }
-
-    .buttons {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      margin-top: 1rem;
-      flex-wrap: wrap;
-    }
-
-    .buttons a {
-      text-decoration: none;
-      background: #ffffff20;
-      padding: 0.7rem 1.2rem;
-      border: 1px solid white;
-      border-radius: 30px;
-      color: white;
-      transition: 0.3s;
-    }
-
-    .buttons a:hover {
-      background: white;
-      color: black;
-    }
-
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 15px;
-      padding: 2rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .gallery img {
-      width: 100%;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-      box-shadow: 0 0 10px #00000070;
-      animation: fadeIn 0.6s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    #lightbox {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.9);
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      z-index: 999;
-    }
-
-    #lightbox img {
-      max-width: 90%;
-      max-height: 80%;
-      border-radius: 10px;
-    }
-
-    .lightbox-controls {
-      position: absolute;
-      top: 50%;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      transform: translateY(-50%);
-      pointer-events: none;
-    }
-
-    .arrow-btn {
-      font-size: 3rem;
-      color: white;
-      background: transparent;
-      border: none;
-      cursor: pointer;
-      padding: 0 1rem;
-      pointer-events: auto;
-      transition: color 0.3s ease;
-      user-select: none;
-    }
-
-    .arrow-btn:hover {
-      color: #ccc;
-    }
-
-    .download-close {
-      margin-top: 1rem;
-      display: flex;
-      gap: 1rem;
-      justify-content: center;
-    }
-
-    .download-close button {
-      padding: 0.5rem 1rem;
-      background: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    .download-close button:hover {
-      background: #ddd;
-    }
-
-    #watermark {
-      position: fixed;
-      bottom: 10px;
-      right: 10px;
-      font-size: 14px;
-      opacity: 0.5;
-    }
-
-    #backToTop {
-      position: fixed;
-      bottom: 20px;
-      left: 20px;
-      font-size: 1.5rem;
-      background: #ffffff20;
-      color: white;
-      padding: 10px 14px;
-      border-radius: 50%;
-      border: 1px solid white;
-      cursor: pointer;
-      display: none;
-      transition: 0.3s;
-    }
-
-    #backToTop:hover {
-      background: white;
-      color: black;
-    }
+  }
   </style>
 </head>
 <body>
-
-<div class="overlay"></div>
-
-<header>
-  <h1>Keval's Photography</h1>
-  <div class="buttons">
-    <a href="/">🏠 Home</a>
-    <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">📷 Follow on Instagram</a>
+  <div class="container">
+    <h1>Keval's Photography</h1>
+    <div class="buttons">
+      <a href="/" class="btn">🏠 Home</a>
+      <a href="https://www.instagram.com/keval_kotadia_/" target="_blank" class="btn">📷 Follow on Instagram</a>
+    </div>
+    <div class="gallery">
+      ${[...Array(17)].map((_, i) => `
+        <img src="/gallery/img/${i + 1}.jpg" alt="Photo ${i + 1}" loading="lazy" onclick="openLightbox(${i})">
+      `).join('')}
+    </div>
   </div>
-</header>
 
-<section class="gallery">
-  <!-- Image Blocks -->
-  <img src="/images/1.jpg" alt="Photo 1" loading="lazy" onclick="openLightbox(0)">
-  <img src="/images/2.jpg" alt="Photo 2" loading="lazy" onclick="openLightbox(1)">
-  <img src="/images/3.jpg" alt="Photo 3" loading="lazy" onclick="openLightbox(2)">
-  <img src="/images/4.jpg" alt="Photo 4" loading="lazy" onclick="openLightbox(3)">
-  <img src="/images/5.jpg" alt="Photo 5" loading="lazy" onclick="openLightbox(4)">
-  <img src="/images/6.jpg" alt="Photo 6" loading="lazy" onclick="openLightbox(5)">
-  <img src="/images/7.jpg" alt="Photo 7" loading="lazy" onclick="openLightbox(6)">
-  <img src="/images/8.jpg" alt="Photo 8" loading="lazy" onclick="openLightbox(7)">
-  <img src="/images/9.jpg" alt="Photo 9" loading="lazy" onclick="openLightbox(8)">
-  <img src="/images/10.jpg" alt="Photo 10" loading="lazy" onclick="openLightbox(9)">
-  <img src="/images/11.jpg" alt="Photo 11" loading="lazy" onclick="openLightbox(10)">
-  <img src="/images/12.jpg" alt="Photo 12" loading="lazy" onclick="openLightbox(11)">
-  <img src="/images/13.jpg" alt="Photo 13" loading="lazy" onclick="openLightbox(12)">
-  <img src="/images/14.jpg" alt="Photo 14" loading="lazy" onclick="openLightbox(13)">
-  <img src="/images/15.jpg" alt="Photo 15" loading="lazy" onclick="openLightbox(14)">
-  <img src="/images/16.jpg" alt="Photo 16" loading="lazy" onclick="openLightbox(15)">
-  <img src="/images/17.jpg" alt="Photo 17" loading="lazy" onclick="openLightbox(16)">
-</section>
-
-<div id="lightbox">
-  <div class="lightbox-controls">
-    <button class="arrow-btn" onclick="prevImage()">&#60;</button>
-    <button class="arrow-btn" onclick="nextImage()">&#62;</button>
+  <div class="lightbox" id="lightbox">
+    <span class="lightbox-arrow lightbox-prev" onclick="changeSlide(-1)">&lt;</span>
+    <img id="lightbox-img" src="" alt="Full Size" />
+    <span class="lightbox-arrow lightbox-next" onclick="changeSlide(1)">&gt;</span>
+    <div class="lightbox-controls">
+      <a id="downloadBtn" class="btn" download target="_blank">⬇️ Download</a>
+      <button class="btn danger" onclick="closeLightbox()">❌ Close</button>
+    </div>
   </div>
-  <img id="lightboxImage" src="" alt="Preview"/>
-  <div class="download-close">
-    <button onclick="downloadImage()">⬇️ Download</button>
-    <button onclick="closeLightbox()">❌ Close</button>
-  </div>
-</div>
 
-<div id="watermark">© Keval Photography</div>
-<div id="backToTop" onclick="scrollToTop()">↑</div>
+  <script>
+    const images = [...Array(17)].map((_, i) => `/gallery/img/${i + 1}.jpg`);
+    let currentIndex = 0;
 
-<script>
-  const images = Array.from(document.querySelectorAll('.gallery img'));
-  const lightbox = document.getElementById('lightbox');
-  const lightboxImage = document.getElementById('lightboxImage');
-  let currentIndex = 0;
-
-  function openLightbox(index) {
-    currentIndex = index;
-    lightboxImage.src = images[currentIndex].src;
-    lightbox.style.display = 'flex';
-  }
-
-  function closeLightbox() {
-    lightbox.style.display = 'none';
-  }
-
-  function nextImage() {
-    currentIndex = (currentIndex + 1) % images.length;
-    lightboxImage.src = images[currentIndex].src;
-  }
-
-  function prevImage() {
-    currentIndex = (currentIndex - 1 + images.length) % images.length;
-    lightboxImage.src = images[currentIndex].src;
-  }
-
-  function downloadImage() {
-    const link = document.createElement('a');
-    link.href = images[currentIndex].src;
-    link.download = `photo_${currentIndex + 1}.jpg`;
-    link.click();
-  }
-
-  // Arrow keys support
-  document.addEventListener('keydown', function(e) {
-    if (lightbox.style.display === 'flex') {
-      if (e.key === 'ArrowRight') nextImage();
-      else if (e.key === 'ArrowLeft') prevImage();
-      else if (e.key === 'Escape') closeLightbox();
+    function openLightbox(index) {
+      currentIndex = index;
+      document.getElementById('lightbox-img').src = images[currentIndex];
+      document.getElementById('downloadBtn').href = images[currentIndex];
+      document.getElementById('lightbox').style.display = 'flex';
     }
-  });
 
-  // Touch swipe support
-  let touchStartX = 0;
-  lightbox.addEventListener('touchstart', e => {
-    touchStartX = e.changedTouches[0].screenX;
-  });
-
-  lightbox.addEventListener('touchend', e => {
-    const deltaX = e.changedTouches[0].screenX - touchStartX;
-    if (Math.abs(deltaX) > 50) {
-      if (deltaX > 0) prevImage();
-      else nextImage();
+    function closeLightbox() {
+      document.getElementById('lightbox').style.display = 'none';
     }
-  });
 
-  // Back to top
-  window.onscroll = function () {
-    document.getElementById("backToTop").style.display =
-      window.scrollY > 200 ? "block" : "none";
-  };
+    function changeSlide(direction) {
+      currentIndex = (currentIndex + direction + images.length) % images.length;
+      openLightbox(currentIndex);
+    }
 
-  function scrollToTop() {
-    window.scrollTo({ top: 0, behavior: 'smooth' });
-  }
-</script>
+    // Keyboard + swipe
+    document.addEventListener('keydown', e => {
+      if (document.getElementById('lightbox').style.display === 'flex') {
+        if (e.key === 'ArrowLeft') changeSlide(-1);
+        if (e.key === 'ArrowRight') changeSlide(1);
+        if (e.key === 'Escape') closeLightbox();
+      }
+    });
 
+    let touchStartX = 0;
+    document.getElementById('lightbox').addEventListener('touchstart', e => {
+      touchStartX = e.changedTouches[0].screenX;
+    });
+    document.getElementById('lightbox').addEventListener('touchend', e => {
+      const deltaX = e.changedTouches[0].screenX - touchStartX;
+      if (deltaX > 50) changeSlide(-1);
+      if (deltaX < -50) changeSlide(1);
+    });
+  </script>
 </body>
 </html>
